FIX several broken links in the en pages that resulted from the switch to antora

--- a/docs/en-gb/modules/item/partials/automatically-not-available.adoc
+++ b/docs/en-gb/modules/item/partials/automatically-not-available.adoc
@@ -21,7 +21,7 @@ Enter your answer into the CSV file.
 |Yes. Check mark is placed.
 |====
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Checkbox: Show in online store: Not available automatically if net stock is 0 or negativ]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Checkbox: Show in online store: Not available automatically if net stock is 0 or negativ]
 endif::import[]
 
 ifdef::export[]
@@ -40,7 +40,7 @@ Specifies whether the variation is automatically unavailable when it is out of s
 |Yes. Check mark is placed.
 |====
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Checkbox: Show in online store: Not available automatically if net stock is 0 or negativ]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Checkbox: Show in online store: Not available automatically if net stock is 0 or negativ]
 endif::export[]
 
 ifdef::catalogue[]
@@ -58,5 +58,5 @@ Specifies whether the variation is automatically unavailable when it is out of s
 !Yes. Check mark is placed.
 !===
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Checkbox: Show in online store: Not available automatically if net stock is 0 or negativ]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Checkbox: Show in online store: Not available automatically if net stock is 0 or negativ]
 endif::catalogue[]
