--- a/docs/en-gb/modules/item/partials/categories-meta-keywords.adoc
+++ b/docs/en-gb/modules/item/partials/categories-meta-keywords.adoc
@@ -18,5 +18,5 @@ endif::import[]
 ifdef::export,catalogue[]
 The category’s keywords.
 
-Corresponds to the option in the menu: xref:item:categories.adoc#700[Item » Category » [Open category] » Tab: Settings » Entry field: Meta keywords]
+Corresponds to the option in the menu: xref:item:categories.adoc#700[Item » Category » [Open category\] » Tab: Settings » Entry field: Meta keywords]
 endif::export,catalogue[]
