--- a/docs/en-gb/modules/item/partials/content-quantity.adoc
+++ b/docs/en-gb/modules/item/partials/content-quantity.adoc
@@ -16,13 +16,13 @@ This specifies the variation’s numerical content.
 
 *_Note_*: Use the same decimal notation as in the xref:data:ElasticSync.adoc#1300[import options].
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#268[Item » Edit item » [Open variation] » Tab: Settings » Area: Dimensions » Entry field: Content]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#268[Item » Edit item » [Open variation\] » Tab: Settings » Area: Dimensions » Entry field: Content]
 endif::import[]
 
 ifdef::export,catalogue[]
 Specifies the variation’s numerical content.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#268[Item » Edit item » [Open variation] » Tab: Settings » Area: Dimensions » Entry field: Content]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#268[Item » Edit item » [Open variation\] » Tab: Settings » Area: Dimensions » Entry field: Content]
 endif::export,catalogue[]
 
 ifdef::export[]
