--- a/docs/en-gb/modules/item/partials/house-no.adoc
+++ b/docs/en-gb/modules/item/partials/house-no.adoc
@@ -15,5 +15,5 @@ endif::import[]
 ifdef::export,catalogue[]
 The manufacturer’s house number.
 
-Corresponds to the option in the menu: xref:item:manufacturers.adoc#[Setup » Item » Manufacturers » [Open manufacturer] » Entry field: House No.]
+Corresponds to the option in the menu: xref:item:manufacturers.adoc#[Setup » Item » Manufacturers » [Open manufacturer\] » Entry field: House No.]
 endif::export,catalogue[]
