--- a/docs/en-gb/modules/item/partials/item-list-automatically-visible.adoc
+++ b/docs/en-gb/modules/item/partials/item-list-automatically-visible.adoc
@@ -29,7 +29,7 @@ They should not be combined.
 |Yes. Check mark is placed.
 |====
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Checkbox: Item list: Visible automatically if net stock is positive]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Checkbox: Item list: Visible automatically if net stock is positive]
 endif::import[]
 
 ifdef::export[]
@@ -53,5 +53,5 @@ They should not be combined.
 |Yes. Check mark is placed.
 |====
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Checkbox: Item list: Visible automatically if net stock is positive]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Checkbox: Item list: Visible automatically if net stock is positive]
 endif::export[]
