--- a/docs/en-gb/modules/item/partials/net-transportation-costs.adoc
+++ b/docs/en-gb/modules/item/partials/net-transportation-costs.adoc
@@ -10,13 +10,13 @@ Use the same decimal notation as in the xref:data:ElasticSync.adoc#1300[import o
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#280[Item » Edit item » [Open variation] » Tab: Settings » Area: Costs » Entry field: Net transportation costs]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#280[Item » Edit item » [Open variation\] » Tab: Settings » Area: Costs » Entry field: Net transportation costs]
 endif::import[]
 
 ifdef::export,catalogue[]
 The net transportation costs for the variation.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#280[Item » Edit item » [Open variation] » Tab: Settings » Area: Costs » Entry field: Net transportation costs]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#280[Item » Edit item » [Open variation\] » Tab: Settings » Area: Costs » Entry field: Net transportation costs]
 endif::export,catalogue[]
 
 *_Note_*: This value is used for price calculations and for calculating the acquisition price.
