--- a/docs/en-gb/modules/item/partials/net-weight.adoc
+++ b/docs/en-gb/modules/item/partials/net-weight.adoc
@@ -12,13 +12,13 @@ Use the same decimal notation as in the xref:data:ElasticSync.adoc#1300[import o
 *_Permitted import values_*: Numeric
 
 You can find the result of the import in the back end menu:
-xref:item:managing-items.adoc#270[Item » Edit item » [Open variation] » Tab: Settings » Area: Dimensions » Entry field: Net weight]
+xref:item:managing-items.adoc#270[Item » Edit item » [Open variation\] » Tab: Settings » Area: Dimensions » Entry field: Net weight]
 endif::import[]
 
 ifdef::export,catalogue[]
 The variation’s net weight in grams.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#270[Item » Edit item » [Open variation] » Tab: Settings » Area: Dimensions » Entry field: Net weight]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#270[Item » Edit item » [Open variation\] » Tab: Settings » Area: Dimensions » Entry field: Net weight]
 endif::export,catalogue[]
 
 *_Background info_*: The net weight is the weight of the variation without packaging.
