--- a/docs/en-gb/modules/item/partials/telephone-number.adoc
+++ b/docs/en-gb/modules/item/partials/telephone-number.adoc
@@ -15,5 +15,5 @@ endif::import[]
 ifdef::export,catalogue[]
 The manufacturer’s telephone number.
 
-Corresponds to the option in the menu: xref:item:manufacturers.adoc#[Setup » Item » Manufacturers » [Open manufacturer] » Entry field: Telephone number]
+Corresponds to the option in the menu: xref:item:manufacturers.adoc#[Setup » Item » Manufacturers » [Open manufacturer\] » Entry field: Telephone number]
 endif::export,catalogue[]
