--- a/docs/en-gb/modules/item/partials/url-name.adoc
+++ b/docs/en-gb/modules/item/partials/url-name.adoc
@@ -23,7 +23,7 @@ endif::import[]
 ifdef::export,catalogue[]
 The category’s URL name.
 
-Corresponds to the option in the menu: xref:item:categories.adoc#700[Item » Category » [Open category] » Tab: Settings » Entry field: URL name]
+Corresponds to the option in the menu: xref:item:categories.adoc#700[Item » Category » [Open category\] » Tab: Settings » Entry field: URL name]
 endif::export,catalogue[]
 
 ifdef::manual,import[]
