--- a/docs/en-gb/modules/item/partials/variation-name.adoc
+++ b/docs/en-gb/modules/item/partials/variation-name.adoc
@@ -9,11 +9,11 @@ Enter a name for the variation into the CSV file.
 
 *_Permitted import values_*: Alpha-numeric
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#190[Item » Edit item » [Open variation] » Tab: Settings » Area: Basic settings » Entry field: Variation name]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#190[Item » Edit item » [Open variation\] » Tab: Settings » Area: Basic settings » Entry field: Variation name]
 endif::import[]
 
 ifdef::export,catalogue[]
 The name of the variation.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#190[Item » Edit item » [Open variation] » Tab: Settings » Area: Basic settings » Entry field: Variation name]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#190[Item » Edit item » [Open variation\] » Tab: Settings » Area: Basic settings » Entry field: Variation name]
 endif::export,catalogue[]
