--- a/docs/en-gb/modules/item/partials/age-rating.adoc
+++ b/docs/en-gb/modules/item/partials/age-rating.adoc
@@ -45,7 +45,7 @@ Enter the item’s age rating into the CSV file.
 |(99) Unknown
 |====
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item] » Tab: Global » Area: Basic settings » Drop-down list: Age rating]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item\] » Tab: Global » Area: Basic settings » Drop-down list: Age rating]
 endif::import[]
 
 ifdef::export[]
@@ -89,7 +89,7 @@ The item’s age rating.
 |(99) Unknown
 |====
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item] » Tab: Global » Area: Basic settings » Drop-down list: Age rating]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item\] » Tab: Global » Area: Basic settings » Drop-down list: Age rating]
 endif::export[]
 
 *_Note_*: Items with an *18+ age rating* must be linked to a xref:fulfilment:preparing-the-shipment.adoc#1000[shipping profile] for which the *PostIdent* option was activated.
