--- a/docs/en-gb/modules/item/partials/categories-meta-description.adoc
+++ b/docs/en-gb/modules/item/partials/categories-meta-description.adoc
@@ -24,5 +24,5 @@ The category’s meta description.
 The meta description is analysed by search engines. As such, it is especially important for the homepage.
 The meta description should contain the most important content in one sentence.
 
-Corresponds to the option in the menu: xref:item:categories.adoc#700[Item » Category » [Open category] » Tab: Settings » Entry field: Meta description]
+Corresponds to the option in the menu: xref:item:categories.adoc#700[Item » Category » [Open category\] » Tab: Settings » Entry field: Meta description]
 endif::export,catalogue[]
