--- a/docs/en-gb/modules/item/partials/condition.adoc
+++ b/docs/en-gb/modules/item/partials/condition.adoc
@@ -27,7 +27,7 @@ Enter the item’s condition into the CSV file.
 |[4] Factory seconds
 |====
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item] » Tab: Global » Area: Basic settings » Drop-down list: Condition]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item\] » Tab: Global » Area: Basic settings » Drop-down list: Condition]
 endif::import[]
 
 ifdef::export-id[]
@@ -80,7 +80,7 @@ Is specified by the condition name.
 endif::export-name[]
 
 ifdef::export[]
-Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item] » Tab: Global » Area: Basic settings » Drop-down list: Condition]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item\] » Tab: Global » Area: Basic settings » Drop-down list: Condition]
 endif::export[]
 
 ifdef::catalogue[]
@@ -106,5 +106,5 @@ Is specified by the condition ID.
 ![4] Factory seconds
 !===
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item] » Tab: Global » Area: Basic settings » Drop-down list: Condition]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item\] » Tab: Global » Area: Basic settings » Drop-down list: Condition]
 endif::catalogue[]
