--- a/docs/en-gb/modules/item/partials/ebay-store-category.adoc
+++ b/docs/en-gb/modules/item/partials/ebay-store-category.adoc
@@ -9,13 +9,13 @@ Enter the eBay store category for this item into the CSV file.
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#45[Item » Edit item » [Open item] » Tab: Multi-Channel » Area: Listing default settings » Entry field: Store category 1 & 2]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#45[Item » Edit item » [Open item\] » Tab: Multi-Channel » Area: Listing default settings » Entry field: Store category 1 & 2]
 endif::import[]
 
 ifdef::export[]
 The eBay store category ID for this item.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#45[Item » Edit item » [Open item] » Tab: Multi-Channel » Area: Listing default settings » Entry field: Store category 1 & 2]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#45[Item » Edit item » [Open item\] » Tab: Multi-Channel » Area: Listing default settings » Entry field: Store category 1 & 2]
 endif::export[]
 
 *_Use case_*: in the first step, you’ll create listing templates that apply to all store categories. Then in the second step, you’ll specify the store category for each individual item.
