--- a/docs/en-gb/modules/item/partials/external-name.adoc
+++ b/docs/en-gb/modules/item/partials/external-name.adoc
@@ -30,5 +30,5 @@ It is also xref:item:manufacturers.adoc#450[relevant for the search function in 
 * When you transfer your item data to marketplaces, this external manufacturer name will be transmitted.
 If there is no external manufacturer name, then the internal name will be used instead.
 
-Corresponds to the option in the menu: xref:item:manufacturers.adoc#[Setup » Item » Manufacturers » [Open manufacturer] » Entry field: External name]
+Corresponds to the option in the menu: xref:item:manufacturers.adoc#[Setup » Item » Manufacturers » [Open manufacturer\] » Entry field: External name]
 endif::export,catalogue[]
