--- a/docs/en-gb/modules/item/partials/gross-weight.adoc
+++ b/docs/en-gb/modules/item/partials/gross-weight.adoc
@@ -11,13 +11,13 @@ Use the same decimal notation as in the xref:data:ElasticSync.adoc#1300[import o
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#270[Item » Edit item » [Open variation] » Tab: Settings » Area: Dimensions » Entry field: Gross weight]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#270[Item » Edit item » [Open variation\] » Tab: Settings » Area: Dimensions » Entry field: Gross weight]
 endif::import[]
 
 ifdef::export,catalogue[]
 The variation’s gross weight in grams.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#270[Item » Edit item » [Open variation] » Tab: Settings » Area: Dimensions » Entry field: Gross weight]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#270[Item » Edit item » [Open variation\] » Tab: Settings » Area: Dimensions » Entry field: Gross weight]
 endif::export,catalogue[]
 
 *_Background info_*: For individually packaged variations, the gross weight is the weight of the variation including packaging.
