--- a/docs/en-gb/modules/item/partials/logo-url.adoc
+++ b/docs/en-gb/modules/item/partials/logo-url.adoc
@@ -18,5 +18,5 @@ ifdef::export,catalogue[]
 The URL that leads to the manufacturer’s logo.
 The URL can have up to 2,000 characters.
 
-Corresponds to the option in the menu: xref:item:manufacturers.adoc#[Setup » Item » Manufacturers » [Open manufacturer] » Entry field: Logo URL]
+Corresponds to the option in the menu: xref:item:manufacturers.adoc#[Setup » Item » Manufacturers » [Open manufacturer\] » Entry field: Logo URL]
 endif::export,catalogue[]
