--- a/docs/en-gb/modules/item/partials/manufacturer.adoc
+++ b/docs/en-gb/modules/item/partials/manufacturer.adoc
@@ -27,7 +27,7 @@ If the manufacturer data record does not already exist in plentymarkets, then a 
 endif::import-name[]
 
 ifdef::import[]
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item] » Tab: Global » Area: Basic settings » Drop-down list: Manufacturer]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item\] » Tab: Global » Area: Basic settings » Drop-down list: Manufacturer]
 endif::import[]
 
 
@@ -44,7 +44,7 @@ You can find the manufacturer names in the menu *Setup » Item » Manufacturers*
 endif::export-name[]
 
 ifdef::export[]
-Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item] » Tab: Global » Area: Basic settings » Drop-down list: Manufacturer]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item\] » Tab: Global » Area: Basic settings » Drop-down list: Manufacturer]
 endif::export[]
 
 ifdef::catalogue[]
@@ -54,7 +54,7 @@ The manufacturer of the item.
 Is specified by the manufacturer ID.
 You can find the manufacturer IDs in the menu *Setup » Item » Manufacturers*.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item] » Tab: Global » Area: Basic settings » Drop-down list: Manufacturer]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item\] » Tab: Global » Area: Basic settings » Drop-down list: Manufacturer]
 //end::catalogue-id[]
 
 //tag::catalogue-name[]
@@ -62,7 +62,7 @@ The manufacturer of the item.
 Is specified by the manufacturer name.
 You can find the manufacturer names in the menu *Setup » Item » Manufacturers*.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item] » Tab: Global » Area: Basic settings » Drop-down list: Manufacturer]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item\] » Tab: Global » Area: Basic settings » Drop-down list: Manufacturer]
 //end::catalogue-name[]
 
 //tag::catalogue-external[]
@@ -70,7 +70,7 @@ The manufacturer of the item.
 Is specified by the external manufacturer name.
 You can find the external manufacturer names in the menu *Setup » Item » Manufacturers*.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item] » Tab: Global » Area: Basic settings » Drop-down list: Manufacturer]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#40[Item » Edit item » [Open item\] » Tab: Global » Area: Basic settings » Drop-down list: Manufacturer]
 //end::catalogue-external[]
 
 endif::catalogue[]
