--- a/docs/en-gb/modules/item/partials/meta-keywords.adoc
+++ b/docs/en-gb/modules/item/partials/meta-keywords.adoc
@@ -12,7 +12,7 @@ Enter keywords for the item into your CSV file (max. 1000 characters).
 [TIP]
 Also use the drop-down list to select the language.
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item] » Tab: Texts » Entry field: Meta keywords]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item\] » Tab: Texts » Entry field: Meta keywords]
 endif::import[]
 
 ifdef::export[]
@@ -22,12 +22,12 @@ The item’s meta keywords.
 Click on icon:sign-in[role="darkGrey"] and decide which language version of the text should be exported.
 If you select the option *As specified in the export settings*, then the language version specified in the xref:data:elastic-export.adoc#800[format settings] will be exported.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item] » Tab: Texts » Entry field: Meta keywords]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item\] » Tab: Texts » Entry field: Meta keywords]
 endif::export[]
 
 ifdef::catalogue[]
 The item’s meta keywords.
-Corresponds to the option in the menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item] » Tab: Texts » Entry field: Meta keywords]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item\] » Tab: Texts » Entry field: Meta keywords]
 
 Once you’ve added this data field, you can use the drop-down list to specify which language version of the text should be exported.
 endif::catalogue[]
