--- a/docs/en-gb/modules/item/partials/meta-title.adoc
+++ b/docs/en-gb/modules/item/partials/meta-title.adoc
@@ -30,5 +30,5 @@ ifdef::export,catalogue[]
 The category’s meta title.
 The meta title is displayed in the tab title of the browser and in search engine results.
 
-Corresponds to the option in the menu: xref:item:categories.adoc#700[Item » Category » [Open category] » Tab: Settings » Entry field: Meta title]
+Corresponds to the option in the menu: xref:item:categories.adoc#700[Item » Category » [Open category\] » Tab: Settings » Entry field: Meta title]
 endif::export,catalogue[]
