--- a/docs/en-gb/modules/item/partials/neckermann.adoc
+++ b/docs/en-gb/modules/item/partials/neckermann.adoc
@@ -18,5 +18,5 @@ ifdef::export,catalogue[]
 The manufacturer ID for the market.
 You will receive the manufacturer ID when setting up the market.
 
-Corresponds to the option in the menu: xref:item:manufacturers.adoc#[Setup » Item » Manufacturers » [Open manufacturer] » Entry field: Neckermann.at Enterprise-ID]
+Corresponds to the option in the menu: xref:item:manufacturers.adoc#[Setup » Item » Manufacturers » [Open manufacturer\] » Entry field: Neckermann.at Enterprise-ID]
 endif::export,catalogue[]
