--- a/docs/en-gb/modules/item/partials/packing-units-quantity.adoc
+++ b/docs/en-gb/modules/item/partials/packing-units-quantity.adoc
@@ -11,13 +11,13 @@ Enter the number of packing units into the CSV file if the item consists of mult
 
 *_Permitted import values_*: Numeric (a number between 0 and 20)
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#290[Item » Edit item » [Open variation] » Tab: Settings » Area: Shipping » Packing units (left drop-down list)]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#290[Item » Edit item » [Open variation\] » Tab: Settings » Area: Shipping » Packing units (left drop-down list)]
 endif::import[]
 
 ifdef::export,catalogue[]
 Specifies the number of packing units if the item consists of multiple packages.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#290[Item » Edit item » [Open variation] » Tab: Settings » Area: Shipping » Packing units (left drop-down list)]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#290[Item » Edit item » [Open variation\] » Tab: Settings » Area: Shipping » Packing units (left drop-down list)]
 endif::export,catalogue[]
 
 ifdef::export[]
