--- a/docs/en-gb/modules/item/partials/preview-text.adoc
+++ b/docs/en-gb/modules/item/partials/preview-text.adoc
@@ -13,7 +13,7 @@ Enter a preview text for the item in your CSV file.
 [TIP]
 Also use the drop-down list to select the language.
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item] » Tab: Texts » Entry field: Preview text]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item\] » Tab: Texts » Entry field: Preview text]
 endif::import[]
 
 ifdef::export[]
@@ -23,12 +23,12 @@ The item’s preview text.
 Click on icon:sign-in[role="darkGrey"] and decide which language version of the text should be exported.
 If you select the option *As specified in the export settings*, then the language version specified in the xref:data:elastic-export.adoc#800[format settings] will be exported.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item] » Tab: Texts » Entry field: Preview text]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item\] » Tab: Texts » Entry field: Preview text]
 endif::export[]
 
 ifdef::catalogue[]
 The item’s preview text.
-Corresponds to the option in the menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item] » Tab: Texts » Entry field: Preview text]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#50[Item » Edit item » [Open item\] » Tab: Texts » Entry field: Preview text]
 
 Once you’ve added this data field, you can use the drop-down list to specify which language version of the text should be exported.
 endif::catalogue[]
