--- a/docs/en-gb/modules/item/partials/symbol.adoc
+++ b/docs/en-gb/modules/item/partials/symbol.adoc
@@ -11,7 +11,7 @@ Enter the appropriate availability level (1-10) into the CSV file.
 
 *_Permitted import values_*: Numeric (internal ID)
 
-You can find the result of the import in the back end menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Symbols 1-10]
+You can find the result of the import in the back end menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Symbols 1-10]
 endif::import[]
 
 ifdef::export[]
@@ -28,7 +28,7 @@ Is specified by the average delivery time in days.
 endif::export-days[]
 
 ifdef::export[]
-Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Symbols 1-10]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Symbols 1-10]
 endif::export[]
 
 ifdef::catalogue[]
@@ -37,7 +37,7 @@ ifdef::catalogue[]
 Specifies the variation’s delivery time.
 Is specified by the ID of the availability level (1-10).
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Symbols 1-10]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Symbols 1-10]
 
 *_Note_*:
 The availability levels are configured in the menu xref:item:availabilities.adoc#[Setup » Item » Availability].
@@ -53,7 +53,7 @@ The setting is only relevant if xref:stock-management:setting-up-a-warehouse.ado
 Specifies the variation’s delivery time.
 Is specified by the text of the availability level.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Symbols 1-10]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Symbols 1-10]
 
 *_Note_*:
 The availability levels are configured in the menu xref:item:availabilities.adoc#[Setup » Item » Availability].
@@ -69,7 +69,7 @@ The setting is only relevant if xref:stock-management:setting-up-a-warehouse.ado
 Specifies the variation’s delivery time.
 Is specified by the average delivery time in days.
 
-Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Symbols 1-10]
+Corresponds to the option in the menu: xref:item:managing-items.adoc#200[Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Symbols 1-10]
 
 *_Note_*:
 The availability levels are configured in the menu xref:item:availabilities.adoc#[Setup » Item » Availability].
