--- a/docs/en-gb/modules/item/partials/type.adoc
+++ b/docs/en-gb/modules/item/partials/type.adoc
@@ -63,5 +63,5 @@ Content pages for the plentyShop, e.g. information pages such as terms and condi
 Do you write a xref:online-store:setting-up-ceres.adoc#970[blog for your plentyShop]? You can use blog categories to sort your entries into specific topics like “News” or “About us”.
 !===
 
-Corresponds to the option in the menu: xref:item:categories.adoc#700[Item » Category » [Open category] » Tab: Settings » Drop-down list: Type]
+Corresponds to the option in the menu: xref:item:categories.adoc#700[Item » Category » [Open category\] » Tab: Settings » Drop-down list: Type]
 endif::export[]
